Adressing Copilot code review comments
Signed-off-by: gael@lhopital.org <gael@lhopital.org>